librespeed/service-librespeed-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-backend
  namespace: librespeed
spec:
  internalTrafficPolicy: Local
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/name: librespeed-backend
  sessionAffinity: None
  type: ClusterIP
