librespeed/ingressroute-librespeed-frontend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librespeed-frontend.${dns_domain}
  namespace: librespeed
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speed.${dns_domain}`)
      kind: Rule
      services:
        - name: librespeed-frontend
          kind: Service
          port: 8000
      middlewares:
        - name: librespeed-buffer
