librespeed/ingressroute-librespeed.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librespeed.${dns_domain}
  namespace: librespeed
spec:
  routes:
    - match: Host(`speed.${dns_domain}`)
      kind: Rule
      services:
        - name: librespeed
          kind: Service
          port: 3000
      middlewares:
        - name: librespeed-buffer
